--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -97,14 +97,6 @@ main.nfo-nav .main-wrapper .section:first-of-type {
   padding: var(--spacing-24) 0;
 }
 
-.section.article-sub-right.stay-updated ul {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  list-style: none;
-  margin: 0;
-}
-
 .section.article-sub-left .default-content-wrapper>ul:first-of-type {
   margin: 0;
   list-style: none;
@@ -115,32 +107,196 @@ main.nfo-nav .main-wrapper .section:first-of-type {
   justify-content: space-between;
 }
 
-.section.article-sub-right.our-podcast .default-content-wrapper>ul {
+.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type ul {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  list-style: none;
+  margin: 0;
+}
+
+.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type>ul>li:first-of-type {
+  color: var(--blue-1-800-primary);
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  border-radius: var(--border-radius-circle);
+  border: 1px solid var(--strokes-default);
+  padding: 2px var(--spacing-12);
+}
+
+.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type>ul>li {
+  color: var(--neutrals-700);
+  font-feature-settings: var(--font-features-default);
+  font-family: var(--body);
+  font-size: var(--label-small-size);
+  line-height: var(--label-small-line-height);
+  font-weight: 400;
+}
+
+.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type>ul>li:first-of-type .icon {
+  width: 20px;
+  height: 20px;
+}
+
+.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type>ul>li:last-of-type {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type>ul>li:last-of-type::before {
+  content: '';
+  width: 4px;
+  height: 4px;
+  background-color: var(--blue-1-400);
+  border-radius: 50%;
+  margin-right: 4px;
+}
+
+.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type>ul>li:last-of-type .icon {
+  width: 12px;
+  height: 12px;
+}
+
+.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:last-of-type p,
+.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:last-of-type p span.icon {
+  margin: 0;
+  width: 28px;
+  height: 28px;
+}
+
+.section.article-sub-left .default-content-wrapper h1,
+.section.article-sub-left .default-content-wrapper h2,
+.section.article-sub-left .default-content-wrapper h3,
+.section.article-sub-left .default-content-wrapper h4,
+.section.article-sub-left .default-content-wrapper h5,
+.section.article-sub-left .default-content-wrapper h6 {
+  margin: 24px 0 0;
+  color: var(--blue-1-800-primary);
+  font-feature-settings: var(--font-features-default);
+  font-family: var(--title);
+  font-size: var(--heading-h5-size);
+  line-height: var(--heading-h5-line-height);
+  font-weight: 600;
+}
+
+.section.article-sub-left .default-content-wrapper p:first-of-type {
+  margin: 4px 0 0;
+  color: var(--text-body-2);
+  font-feature-settings: var(--font-features-default);
+  font-family: var(--body);
+  font-size: var(--body-medium-regular-size);
+  line-height: 24px;
+  font-weight: 400;
+}
+
+.section.article-sub-left .default-content-wrapper>ul:last-of-type {
+  margin: 24px 0 0;
+}
+
+.section.article-sub-left .default-content-wrapper ul:last-of-type>li {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.section.article-sub-left .default-content-wrapper ul:last-of-type li p,
+.section.article-sub-left .default-content-wrapper ul:last-of-type li p .icon {
+  margin: 0;
+  width: 35px;
+  height: 35px;
+}
+
+.section.article-sub-left .default-content-wrapper ul:last-of-type li ul {
+  margin: 0;
+}
+
+.section.article-sub-left .default-content-wrapper ul:last-of-type li ul li:first-of-type {
+  color: var(--neutrals-900);
+  font-feature-settings: var(--font-features-default);
+  font-family: var(--body);
+  font-weight: 500;
+  font-size: var(--body-small-medium-size);
+  line-height: var(--body-small-medium-line-height);
+  padding: 0 0 4px;
+}
+
+.section.article-sub-left .default-content-wrapper ul:last-of-type li ul li:last-of-type {
+  color: var(--neutrals-700);
+  font-feature-settings: var(--font-features-default);
+  font-family: var(--body);
+  font-weight: 400;
+  font-size: var(--paragraph-small-regular-size);
+  line-height: var(--paragraph-small-regular-line-height);
+}
+
+.section.article-sub-left .co-branding-wrapper .co-branding p {
+  margin: 24px 0 0;
+  color: #3D3D3D;
+  font-feature-settings: var(--font-features-default);
+  font-family: var(--Body, Inter);
+  font-weight: 400;
+  font-size: var(--body-medium-regular-size);
+  line-height: 24px;
+}
+
+.section.article-sub-left .co-branding-wrapper .co-branding ul {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin: 24px 0 0;
+  list-style: none;
+}
+
+.section.article-sub-left .co-branding-wrapper .co-branding ul>li {
+  color: var(--blue-1-800-primary);
+  font-feature-settings: var(--font-features-default);
+  font-family: var(--body);
+  font-size: var(--body-large-semibold-size);
+  line-height: var(--body-large-semibold-line-height);
+  font-weight: 600;
+}
+
+.section.article-sub-left .co-branding-wrapper .co-branding ul>li>ul>li {
+  color: #3D3D3D;
+  font-feature-settings: var(--font-features-default);
+  font-family: var(--body);
+  font-size: var(--body-medium-regular-size);
+  line-height: 24px;
+  font-weight: 400;
+}
+
+/* .section.article-sub-right.stay-updated ul {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  list-style: none;
+  margin: 0;
+} */
+
+/* .section.article-sub-right.our-podcast .default-content-wrapper>ul {
   margin: 0;
   display: flex;
   flex-direction: column;
   gap: 8px;
   list-style: none;
-}
+} */
 
-.section.article-sub-right.recommended-posts .cards ul {
+/* .section.article-sub-right.recommended-posts .cards ul {
   display: flex;
   flex-direction: column;
   gap: 0;
-}
+} */
 
-.section.article-sub-left.cards-container .cards ul {
+/* .section.article-sub-left.cards-container .cards ul {
   margin: 40px 0 0;
   display: flex;
   flex-direction: column;
   gap: 24px;
-}
+} */
 
-.section.article-sub-left .default-content-wrapper ul:last-of-type {
-  margin: 24px 0 0;
-}
-
-.section.article-sub-right.our-podcast .default-content-wrapper ul>li ul {
+/*.section.article-sub-right.our-podcast .default-content-wrapper ul>li ul {
   display: flex;
   align-items: center;
   gap: 8px;
@@ -150,15 +306,9 @@ main.nfo-nav .main-wrapper .section:first-of-type {
 
 .section.article-sub-left .default-content-wrapper ul:last-of-type li ul {
   margin: 0;
-}
+} */
 
-.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type ul {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  list-style: none;
-  margin: 0;
-}
+
 
 .section.article-sub-right.stay-updated ul li,
 .section.article-sub-right.stay-updated ul li .icon {
@@ -185,12 +335,6 @@ main.nfo-nav .main-wrapper .section:first-of-type {
   flex-direction: column;
 }
 
-.section.article-sub-left .default-content-wrapper ul:last-of-type>li {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
 .section.article-sub-right.our-podcast .default-content-wrapper ul>li ul li {
   color: var(--neutrals-700);
   font-feature-settings: var(--font-features-default);
@@ -201,47 +345,10 @@ main.nfo-nav .main-wrapper .section:first-of-type {
   padding: 0;
 }
 
-.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type>ul>li {
-  color: var(--neutrals-700);
-  font-feature-settings: var(--font-features-default);
-  font-family: var(--body);
-  font-size: var(--label-small-size);
-  line-height: var(--label-small-line-height);
-  font-weight: 400;
-}
-
 .section.article-sub-right.our-podcast .default-content-wrapper ul>li ul li:last-of-type {
   display: flex;
   align-items: center;
   gap: 4px;
-}
-
-.section.article-sub-left .default-content-wrapper ul:last-of-type li ul li:last-of-type {
-  color: var(--neutrals-700);
-  font-feature-settings: var(--font-features-default);
-  font-family: var(--body);
-  font-weight: 400;
-  font-size: var(--paragraph-small-size);
-  line-height: var(--paragraph-small-line-height);
-}
-
-.section.article-sub-left .default-content-wrapper ul:last-of-type li ul li:first-of-type {
-  color: var(--neutrals-900);
-  font-feature-settings: var(--font-features-default);
-  font-family: var(--body);
-  font-weight: 500;
-  font-size: var(--body-small-medium-size);
-  line-height: var(--body-small-medium-line-height);
-}
-
-.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type>ul>li:first-of-type {
-  color: var(--blue-1-800-primary);
-  display: flex;
-  align-items: center;
-  gap: 4px;
-  border-radius: var(--border-radius-circle);
-  border: 1px solid var(--strokes-default);
-  padding: 4px var(--spacing-8);
 }
 
 .section.article-sub-left .default-content-wrapper p:nth-of-type(3) {
@@ -263,16 +370,6 @@ main.nfo-nav .main-wrapper .section:first-of-type {
   margin: var(--spacing-24) 0 0;
 }
 
-.section.article-sub-left .default-content-wrapper p:first-of-type {
-  margin: 4px 0 0;
-  color: var(--text-body-2);
-  font-feature-settings: var(--font-features-default);
-  font-family: var(--body);
-  font-size: var(--paragraph-small-size);
-  line-height: var(--paragraph-small-line-height);
-  font-weight: 400;
-}
-
 .section.article-sub-right.our-podcast .default-content-wrapper ul>li p {
   color: var(--neutrals-800);
   font-feature-settings: var(--font-features-default);
@@ -283,31 +380,11 @@ main.nfo-nav .main-wrapper .section:first-of-type {
   padding: 0 0 4px;
 }
 
-/* .section.article-sub-right.stay-updated ul li,
-.section.article-sub-right.stay-updated ul li .icon {
-  width: 40px;
-  height: 40px;
-} */
-
-.section.article-sub-left .default-content-wrapper ul:last-of-type li p,
-.section.article-sub-left .default-content-wrapper ul:last-of-type li p .icon {
-  margin: 0;
-  width: 35px;
-  height: 35px;
-}
-
 .section.article-sub-right.subscribe-email .default-content-wrapper p:first-of-type,
 .section.article-sub-right.subscribe-email .default-content-wrapper p:first-of-type .icon {
   width: 64px;
   height: 64px;
   margin: 0;
-}
-
-.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:last-of-type p,
-.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:last-of-type p .icon {
-  margin: 0;
-  width: 28px;
-  height: 28px;
 }
 
 .section.article-sub-right.our-podcast .default-content-wrapper ul>li ul li:last-of-type .icon {
@@ -326,17 +403,6 @@ main.nfo-nav .main-wrapper .section:first-of-type {
   height: 12px;
 }
 
-.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type>ul>li:first-of-type .icon {
-  width: 16px;
-  height: 16px;
-}
-
-.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type>ul>li:last-of-type {
-  display: flex;
-  align-items: center;
-  gap: 4px;
-}
-
 .section.article-sub-right.our-podcast .default-content-wrapper ul>li ul li:last-of-type::before {
   content: '';
   width: 4px;
@@ -345,95 +411,6 @@ main.nfo-nav .main-wrapper .section:first-of-type {
   border-radius: 50%;
   margin-right: 4px;
 }
-
-.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type>ul>li:last-of-type::before {
-  content: '';
-  width: 4px;
-  height: 4px;
-  background-color: var(--blue-1-400);
-  border-radius: 50%;
-  margin-right: 4px;
-}
-
-.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type>ul>li:last-of-type .icon {
-  width: 12px;
-  height: 12px;
-}
-
-/* .section.article-sub-left .default-content-wrapper>ul:first-of-type>li:last-of-type p,
-.section.article-sub-left .default-content-wrapper>ul:first-of-type>li:last-of-type p .icon {
-  margin: 0;
-  width: 28px;
-  height: 28px;
-} */
-
-.section.article-sub-left .default-content-wrapper h1,
-.section.article-sub-left .default-content-wrapper h2,
-.section.article-sub-left .default-content-wrapper h3,
-.section.article-sub-left .default-content-wrapper h4,
-.section.article-sub-left .default-content-wrapper h5,
-.section.article-sub-left .default-content-wrapper h6 {
-  margin: 24px 0 0;
-  color: var(--blue-1-800-primary);
-  font-feature-settings: var(--font-features-default);
-  font-family: var(--title);
-  font-size: var(--heading-h5-size);
-  line-height: var(--heading-h5-line-height);
-  font-weight: 600;
-}
-
-/* .section.article-sub-left .default-content-wrapper p:first-of-type {
-  margin: 4px 0 0;
-  color: var(--text-body-2);
-  font-feature-settings: var(--font-features-default);
-  font-family: var(--body);
-  font-size: var(--paragraph-small-size);
-  line-height: var(--paragraph-small-line-height);
-  font-weight: 400;
-} */
-
-/* .section.article-sub-left .default-content-wrapper ul:last-of-type {
-  margin: 24px 0 0;
-} */
-
-/* .section.article-sub-left .default-content-wrapper ul:last-of-type>li {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-} */
-
-/* .section.article-sub-left .default-content-wrapper ul:last-of-type li p,
-.section.article-sub-left .default-content-wrapper ul:last-of-type li p .icon {
-  margin: 0;
-  width: 35px;
-  height: 35px;
-} */
-
-/* .section.article-sub-left .default-content-wrapper ul:last-of-type li ul {
-  margin: 0;
-} */
-
-/* .section.article-sub-left .default-content-wrapper ul:last-of-type li ul li:first-of-type {
-  color: var(--neutrals-900);
-  font-feature-settings: var(--font-features-default);
-  font-family: var(--body);
-  font-weight: 500;
-  font-size: var(--body-small-medium-size);
-  line-height: var(--body-small-medium-line-height);
-} */
-
-/* .section.article-sub-left .default-content-wrapper ul:last-of-type li ul li:last-of-type {
-  color: var(--neutrals-700);
-  font-feature-settings: var(--font-features-default);
-  font-family: var(--body);
-  font-weight: 400;
-  font-size: var(--paragraph-small-size);
-  line-height: var(--paragraph-small-line-height);
-} */
-
-/* .section.article-sub-left .default-content-wrapper p:nth-of-type(2) {
-  margin: var(--spacing-24) 0 0;
-} */
 
 .section.article-sub-right.our-podcast .default-content-wrapper picture {
   display: block;
@@ -459,25 +436,15 @@ main.nfo-nav .main-wrapper .section:first-of-type {
   height: 100%;
 }
 
-/* .section.article-sub-left .default-content-wrapper p:nth-of-type(3) {
-  color: #3D3D3D;
-  font-feature-settings: var(--font-features-default);
-  font-family: var(--body);
-  font-weight: 400;
-  font-size: var(--paragraph-small-size);
-  line-height: var(--paragraph-small-line-height);
-  margin: 8px 0 0;
-} */
-
-@media screen and (width>768px) {
+@media screen and (width<=768px) {
   .section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type>ul>li {
     font-size: var(--label-small-size);
     line-height: var(--label-small-line-height);
   }
 
   .section.article-sub-left .default-content-wrapper ul:last-of-type li ul li:last-of-type {
-    font-size: var(--paragraph-small-size);
-    line-height: var(--paragraph-small-line-height);
+    font-size: var(--paragraph-small-regular-size);
+    line-height: var(--paragraph-small-regular-line-height);
   }
 
   .section.article-sub-left .default-content-wrapper ul:last-of-type li ul li:first-of-type {
@@ -486,7 +453,7 @@ main.nfo-nav .main-wrapper .section:first-of-type {
   }
 
   .section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type>ul>li:first-of-type {
-    padding: 4px var(--spacing-12);
+    padding: 2px var(--spacing-12);
   }
 
   .section.article-sub-left .default-content-wrapper>ul:first-of-type>li:first-of-type>ul>li:first-of-type .icon {
@@ -500,24 +467,14 @@ main.nfo-nav .main-wrapper .section:first-of-type {
   .section.article-sub-left .default-content-wrapper h4,
   .section.article-sub-left .default-content-wrapper h5,
   .section.article-sub-left .default-content-wrapper h6 {
-    font-size: 20px;
-    line-height: 24px;
+    font-size: var(--heading-h5-size);
+    line-height: var(--heading-h5-line-height);
   }
 
   .section.article-sub-left .default-content-wrapper p:first-of-type {
     font-size: var(--body-medium-regular-size);
-    line-height: var(--body-medium-regular-line-height);
+    line-height: 24px;
   }
-
-  /* .section.article-sub-left .default-content-wrapper ul:last-of-type li ul li:first-of-type {
-    font-size: var(--body-small-medium-size);
-    line-height: var(--body-small-medium-line-height);
-  } */
-
-  /* .section.article-sub-left .default-content-wrapper ul:last-of-type li ul li:last-of-type {
-    font-size: var(--paragraph-small-size);
-    line-height: var(--paragraph-small-line-height);
-  } */
 
   .section.article-sub-left .default-content-wrapper p:nth-of-type(2) picture {
     height: 320px;
@@ -944,6 +901,7 @@ main.nfo-nav .main-wrapper .section:first-of-type {
 }
 
 @media screen and (width>768px) {
+
   .section.article-sub-right.subscribe-email .default-content-wrapper h1,
   .section.article-sub-right.subscribe-email .default-content-wrapper h2,
   .section.article-sub-right.subscribe-email .default-content-wrapper h3,
@@ -1078,6 +1036,7 @@ main.nfo-nav .main-wrapper .section:first-of-type {
 } */
 
 @media screen and (width>768px) {
+
   .section.article-sub-right.recommended-posts .default-content-wrapper h1,
   .section.article-sub-right.recommended-posts .default-content-wrapper h2,
   .section.article-sub-right.recommended-posts .default-content-wrapper h3,
@@ -1357,6 +1316,7 @@ main.nfo-nav .main-wrapper .section:first-of-type {
 }
 
 @media screen and (width <=768px) {
+
   .section.wcs-series-pdf.tabs-container .default-content-wrapper h1,
   .section.wcs-series-pdf.tabs-container .default-content-wrapper h2,
   .section.wcs-series-pdf.tabs-container .default-content-wrapper h3,
