--- a/styles/tokens-variable.css
+++ b/styles/tokens-variable.css
@@ -334,6 +334,8 @@
     --paragraph-small-weight: var(--weight-regular);
     --paragraph-small-size: var(--spacing-14);
     --paragraph-small-line-height: var(--spacing-20);
+    --paragraph-small-regular-size: var(--spacing-14);
+    --paragraph-small-regular-line-height: var(--spacing-20);
     --paragraph-xsmall-font: var(--body);
     --paragraph-xsmall-weight: var(--weight-regular);
     --paragraph-xsmall-size: var(--spacing-12);
