--- a/blocks/header/sub-header.css
+++ b/blocks/header/sub-header.css
@@ -52,132 +52,160 @@ header nav[aria-expanded="true"] .header-top.header-sub-pms {
 header .header.wealth-header {
   width: 100%;
 }
+
 header .header.wealth-header .nav-wrapper {
   padding: 16px;
 }
-@media (max-width: 768px) {
+
+@media (width <= 768px) {
   header .header.wealth-header .nav-wrapper {
     padding: 0;
   }
 }
+
 header .header.wealth-header .nav-wrapper .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub1 {
   display: none;
 }
-@media (max-width: 768px) {
+
+@media (width <= 768px) {
   header .header.wealth-header .nav-wrapper .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub1 {
     display: none;
   }
 }
-@media (max-width: 768px) {
+
+@media (width <= 768px) {
   header .header.wealth-header .nav-wrapper .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub2 {
     display: block;
   }
 }
-@media (max-width: 768px) {
+
+@media (width <= 768px) {
   header .header.wealth-header .nav-wrapper .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub2 .icon {
     width: 100%;
     height: 100%;
   }
+
   header .header.wealth-header .nav-wrapper .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub2 .icon img {
     width: 64px;
     height: 26.093px;
     aspect-ratio: 64/26.09;
   }
 }
-header .header.wealth-header .nav-wrapper nav[aria-expanded=true] {
+
+header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] {
   height: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-@media (max-width: 768px) {
-  header .header.wealth-header .nav-wrapper nav[aria-expanded=true] {
+
+@media (width <= 768px) {
+  header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] {
     display: grid;
   }
 }
-header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub1 {
+
+header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub1 {
   display: none;
 }
-@media (max-width: 768px) {
-  header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub1 {
+
+@media (width <= 768px) {
+  header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub1 {
     display: none;
   }
 }
-@media (max-width: 768px) {
-  header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub2 {
+
+@media (width <= 768px) {
+  header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub2 {
     display: block;
   }
 }
-header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub2 .navbrand-inner-net1::after {
+
+header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub2 .navbrand-inner-net1::after {
   content: "";
   width: 0;
   height: 0;
 }
-header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub2 .navbrand-inner-net1 .icon-wcs-new-logo-golden-logo {
+
+header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub2 .navbrand-inner-net1 .icon-wcs-new-logo-golden-logo {
   margin-bottom: 14px;
 }
-@media (max-width: 768px) {
-  header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub2 .navbrand-inner-net1 .icon-wcs-new-logo-golden-logo {
+
+@media (width <= 768px) {
+  header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub2 .navbrand-inner-net1 .icon-wcs-new-logo-golden-logo {
     margin-bottom: 0;
     width: 64px;
     height: 26.093px;
     aspect-ratio: 64/26.09;
   }
 }
-header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub2 .navbrand-inner-net1 .icon-wcs-new-logo-golden-logo .navbrand-list-content1 {
+
+header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub2 .navbrand-inner-net1 .icon-wcs-new-logo-golden-logo .navbrand-list-content1 {
   width: 97px;
   height: 39px;
 }
-@media (max-width: 768px) {
-  header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub2 .navbrand-inner-net1 .icon-wcs-new-logo-golden-logo .navbrand-list-content1 {
+
+@media (width <= 768px) {
+  header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-brand .navbrand-cont1 .navbrand-sec3 .navbrand-sub2 .navbrand-inner-net1 .icon-wcs-new-logo-golden-logo .navbrand-list-content1 {
     width: 64px;
     height: 26px;
   }
 }
-header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-brand img {
+
+header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-brand img {
   height: 45px;
 }
-@media (max-width: 768px) {
-  header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-brand img {
+
+@media (width <= 768px) {
+  header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-brand img {
     height: auto;
   }
 }
-header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-sections {
+
+header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-sections {
   flex: unset;
   height: auto;
 }
-@media (max-width: 768px) {
-  header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-sections {
+
+@media (width <= 768px) {
+  header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-sections {
     height: 100%;
   }
 }
-header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-sections .default-content-wrapper .nav-sec-sec1 {
+
+header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-sections .default-content-wrapper .nav-sec-sec1 {
   justify-content: flex-end;
 }
-@media (max-width: 768px) {
-  header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-sections .default-content-wrapper .nav-sec-sec1 {
+
+@media (width <= 768px) {
+  header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-sections .default-content-wrapper .nav-sec-sec1 {
     gap: 28px;
   }
 }
-header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-sec-sub1 {
+
+header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-sec-sub1 {
   display: none;
 }
-header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop::after {
+
+header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop::after {
   content: unset;
 }
-@media (max-width: 768px) {
-  header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop {
+
+@media (width <= 768px) {
+  header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop {
     padding: 0;
     line-height: 0;
   }
 }
-@media (max-width: 768px) {
-  header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop .button-container {
+
+@media (width <= 768px) {
+  header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop .button-container {
     padding: 0;
     line-height: 0;
   }
 }
-header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop[aria-expanded=false] .nav-sec-list1 {
+
+header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop[aria-expanded="false"] .nav-sec-list1 {
   color: var(--neutrals-white);
   font-feature-settings: var(--font-features-default);
   font-family: var(--body);
@@ -188,8 +216,9 @@ header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-sections 
   padding: 0;
   background-color: transparent;
 }
-@media (max-width: 768px) {
-  header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop[aria-expanded=false] .nav-sec-list1 {
+
+@media (width <= 768px) {
+  header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop[aria-expanded="false"] .nav-sec-list1 {
     color: var(--blue-1-800-primary);
     font-feature-settings: var(--font-features-default);
     font-family: var(--body);
@@ -201,23 +230,27 @@ header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-sections 
     line-height: 20px;
   }
 }
-@media (max-width: 768px) {
-  header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop.nav-sec-sub2 {
+
+@media (width <= 768px) {
+  header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop.nav-sec-sub2 {
     line-height: 0;
     padding: 0;
     margin-top: 16px;
   }
 }
-@media (max-width: 768px) {
-  header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop.nav-sec-sub2 p.nav-sec-inner-text1 {
+
+@media (width <= 768px) {
+  header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop.nav-sec-sub2 p.nav-sec-inner-text1 {
     line-height: 0;
   }
 }
-header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop.nav-sec-sub2 .nav-sec-inner-text1 {
+
+header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop.nav-sec-sub2 .nav-sec-inner-text1 {
   display: flex;
 }
-@media (max-width: 768px) {
-  header .header.wealth-header .nav-wrapper nav[aria-expanded=true] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop.nav-sec-sub2 .nav-sec-inner-text1 {
+
+@media (width <= 768px) {
+  header .header.wealth-header .nav-wrapper nav[aria-expanded="true"] .nav-sections .default-content-wrapper .nav-sec-sec1 .nav-drop.nav-sec-sub2 .nav-sec-inner-text1 {
     line-height: 0;
   }
 }
